// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link does not render the external icon even if the href is external 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-0"
    href="www.google.it"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link does not render the external icon if the href is internal 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-0"
    href="relative"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-0"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        test link test
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders the external icon even if the href is internal 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-5.emotion-5 {
  width: 16px;
  height: 16px;
}

<a
    class="emotion-0"
    href="/relative"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        <span
          class="emotion-3"
        >
          test link text
        </span>
      </span>
      <span
        class="emotion-2"
      >
        <svg
          class="emotion-5 emotion-6"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            External link
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders the external icon if the href is external 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-0"
    href="www.google.it"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #ef1703;
}

.emotion-0:visited:not(:disabled) {
  color: #a60100;
}

.emotion-0:hover:not(:disabled) {
  color: #23a248;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<a
    class="emotion-0"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        test link test
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`LinkStandalone renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #0a68c1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-2::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<a
    class="emotion-0"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        test link test
      </span>
    </span>
  </a>
</DocumentFragment>
`;
